apps/base/traefik-redirect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-sleeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect-sleeper
  template:
    metadata:
      labels:
        app: redirect-sleeper
    spec:
      restartPolicy: Always
      containers:
        - name: sleeper
          image: alpine:3.24@sha256:294b683cb724975bec92580e1e685676bd4b50bda910ddb8c51d4cabeaec77e6
          command: ["/bin/sh", "-c", "--"]
          args: ["trap : TERM INT; sleep infinity & wait"]
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: "0.2"
              memory: "128Mi"
            requests:
              cpu: "0.1"
              memory: "2Mi"
